# EROS-INVOICE-UI

./: .env.example  .gitignore  README.md  deep-research-report.md  openclaw-secure-setup-macos15-apple-silicon.md  system-overview.html
.github/: CODEOWNERS  pull_request_template.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260218_0001_auth_state_tables.py  20260218_0002_reminder_run_tables.py  20260218_0003_conversation_tables.py  20260219_0004_task_store_state.py
backend/src/invoicing_web/: __init__.py  api.py  auth_store.py  broker_tokens.py  cb_seed.py  config.py  conversation_policy.py  conversation_webhook_security.py  conversations.py  creator_tokens.py  main.py  models.py  notifier.py  openclaw.py  pdf_renderer.py  reminder_runs.py  repositories.py  store.py  task_store_backends.py  webhook_security.py
backend/tests/: test_agent_endpoints.py  test_api.py  test_broker_tokens.py  test_cb_seed_pipeline.py  test_config_runtime_secrets.py  test_conversation_api.py  test_creator_tokens.py  test_openclaw_http_sender.py  test_passkey_auth.py  test_payment_platform_api.py  test_startup_guard.py
docs/: cj-jack-repo-access.md  demo-readiness-checklist.md
frontend/: middleware.ts  next.config.mjs  package.json  playwright.config.mjs
openclaw/: README.md  openclaw.json
scripts/: bootstrap_dev.sh  check_baseline.sh  demo_smoke.sh  diagnose_next_dev_css.sh  generate_creator_passkeys.py  reseed_demo_data.sh  seed_from_90d_earnings.py  seed_from_cb_reports.py  seed_grace_bennett.py  start_backend_dev.sh  (+2 more)
(+45 files in other folders)
