[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "invoicing-web-backend"
version = "0.1.0"
description = "Lightweight FastAPI backend scaffold for invoicing workflows"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0,<1.0.0",
  "pydantic>=2.6.0,<3.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.0.0,<9.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
